@@ -14,9 +14,6 @@ Debug filesystem.
 
 Reduce code size.
 
-Re-write wait queues so they don't sit on the kernel stack, but sit on the
-task structure instead.
-
 Simplify device request functions as they can only be asked to get 1
 block.
 
@@ -24,4 +21,3 @@ Modify interrupt code to save ds in VII rather than in kernel data
 segment. Re-write exec and device code to run without filesystem.
 Generally make ELKS ROMable and embedable.
 
-Fix select.
