@@ -1,11 +1,7 @@
 /*
- * Automatically generated C config: don't edit
+ * Automatically generated by make menuconfig: don't edit
  */
 #define AUTOCONF_INCLUDED
-
-/*
- * Just accept the defaults unless you know what you are doing
- */
 
 /*
  * Advanced - for Developers and Hackers only
@@ -38,10 +34,6 @@
 /*
  * Character device drivers
  */
-
-/*
- * Select a console driver
- */
 #define CONFIG_CONSOLE_DIRECT 1
 #undef  CONFIG_CONSOLE_BIOS
 #undef  CONFIG_CONSOLE_SERIAL
@@ -57,10 +49,6 @@
 #undef  CONFIG_FR_KEYMAP
 #undef  CONFIG_SE_KEYMAP
 #define CONFIG_DCON_KRAW 1
-
-/*
- * Other character devices
- */
 #define CONFIG_CHAR_DEV_RS 1
 #define CONFIG_CHAR_DEV_LP 1
 #define CONFIG_CHAR_DEV_MEM 1
@@ -78,15 +66,7 @@
 #undef  CONFIG_BLK_DEV_XD
 #undef  CONFIG_DMA
 #define CONFIG_GENDISK 1
-
-/*
- * Additional block devices
- */
-#undef  CONFIG_BLK_DEV_RAM
-
-/*
- * Block device options
- */
+#define CONFIG_BLK_DEV_RAM 1
 #define CONFIG_BLK_DEV_CHAR 1
 
 /*
@@ -95,17 +75,9 @@
 #define CONFIG_MINIX_FS 1
 #undef  CONFIG_ROMFS_FS
 #undef  CONFIG_ELKSFS_FS
-
-/*
- * General filesystem settings
- */
 #undef  CONFIG_FULL_VFS
 #define CONFIG_FS_EXTERNAL_BUFFER 1
 #define CONFIG_PIPE 1
-
-/*
- * Executable file formats
- */
 #define CONFIG_EXEC_MINIX 1
 #undef  CONFIG_EXEC_MSDOS
 
@@ -118,12 +90,9 @@
  */
 #define CONFIG_SOCKET 1
 #undef  CONFIG_UNIX
-#define CONFIG_NANO 1
-#undef  CONFIG_INET
-
-/*
- *   Advance socket options
- */
+#undef  CONFIG_NANO
+#define CONFIG_INET 1
+#define CONFIG_INET_STATUS 1
 #undef  CONFIG_SOCK_CLIENTONLY
 #define CONFIG_SOCK_STREAMONLY 1
 
